# MGMT

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  mc.rs  protocol.rs  read_write.rs
core/src/protocol/: managed.rs  mod.rs
frontend/: package.json
frontend/src/: App.scss  App.tsx
manage-d/: Cargo.toml
manage-d/src/: main.rs  mc.rs
managed/: Cargo.toml
managed/src/: main.rs
mcsleep/: Cargo.toml  README.md
mcsleep/src/: bin.rs  lib.rs
mcsleep/src/proto/: packet.rs  packet_manipulation.rs  var_int.rs
mcspoof/: Cargo.toml  README.md
mcspoof/src/: main.rs
mcspoof/src/proto/: mod.rs  packet.rs  var_int.rs
