[package]
name = "core"
version = "0.1.0"
authors = ["DusterTheFirst <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.97", features = ["derive"] }
bincode = "1.1.4"
byteorder = "1.3.2"

[dev-dependencies]
tokio-mockstream = "1.1.0"