[package]
name = "core"
version = "0.1.0"
authors = ["DusterTheFirst <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"
publish = false

[dependencies]
serde = { version = "1.0.98", features = ["derive"] }
bincode = "1.1.4"
byteorder = "1.3.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.48" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6" }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2"

[target.'cfg(target_arch = "wasm32")'.profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[lib]
crate-type = ["cdylib", "rlib"]