[package]
name = "manage-d"
version = "0.1.0"
authors = ["DusterTheFirst <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.4.1"
bincode = "1.1.4"
ansi_term = "0.12.0"
bollard = "0.3.2"
tokio = "0.1.22"
lazy_static = "1.3.0"
core = { path = "../core" }
