[package]
name = "manage-d"
version = "0.1.0"
authors = ["DusterTheFirst <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mgmt"
path = "src/main.rs"

[dependencies]
daemonize = "0.4.1"
bincode = "1.1.4"
ansi_term = "0.12.0"
reqwest = "0.9.19"
serde = { version = "1.0.98", features = ["derive"] }
url = "2.0.0"
core = { path = "../core" }
