[package]
name = "manage-d"
version = "0.1.0"
authors = ["DusterTheFirst <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"
publish = false

[[bin]]
name = "mgmt"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12.0"
bincode = "1.1.4"
clap = "2.33.0"
core = { path = "../core" }
daemonize = "0.4.1"
termion = "1.5.3"
reqwest = "0.9.19"
serde = { version = "1.0.98", features = ["derive"] }
url = "2.0.0"
