[package]
name = "mcspoof"
version = "0.1.0"
authors = ["DusterTheFirst <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hematite_server = "0.0.4"
byteorder = "1.3.2"
serde_json = "1.0.40"
serde = { version = "1.0.94", features = ["derive"] }
ansi_term = "0.12.0"